# cpprl

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.old  README.md  roadmap.org  vcpkg.json  vcpkg_linux.json  vcpkg_mac.json
.github/workflows/: cmake.yml
app/: CMakeLists.txt
app/include/: colours.hpp  combat_system.hpp  components.hpp  consumable_factory.hpp  controller.hpp  dungeon.hpp  engine.hpp  entity_factory.hpp  entity_manager.hpp  exceptions.hpp  game_entity.hpp  gui.hpp  health_bar.hpp  input_handler.hpp  message_log.hpp  rectangular_room.hpp  rendering.hpp  state.hpp  tile.hpp  util.hpp  world.hpp  xp_bar.hpp
app/include/components/: ai.hpp
app/include/events/: command.hpp
app/include/serialization/: json_serializer_strategy.hpp
app/include/systems/: ai_system.hpp  enemy_turns.hpp
app/include/types/: action_result.hpp  map.hpp  math.hpp  nparray.hpp  state_fwd.hpp  tile.hpp
app/include/ui/: dungeon_level.hpp  ui.hpp
app/src/: TCODRenderer.cpp  basic_ai_component.cpp  components.cpp  consumable_factory.cpp  dungeon.cpp  engine.cpp  entity_factory.cpp  entity_manager.cpp  game_entity.cpp  gui.cpp  input_handler.cpp  rectangular_room.cpp  state.cpp  world.cpp
app/src/events/: command.cpp
app/src/systems/: ai_system.cpp  enemy_turns.cpp
app/src/types/: map.cpp
app/src/ui/: dungeon_level.cpp  health_bar.cpp  message_log.cpp  ui.cpp  xp_bar.cpp
include/: basic_ai_component.hpp  colours.hpp  combat_system.hpp  components.hpp  controller.hpp  dungeon.hpp  engine.hpp  entity_factory.hpp  entity_manager.hpp  exceptions.hpp  game_entity.hpp  globals.hpp  gui.hpp  health_bar.hpp  history_window.hpp  input_handler.hpp  main.hpp  message_log.hpp  persistent.hpp  rendering.hpp  state.hpp  ui_window.hpp  util.hpp  world.hpp  xp_bar.hpp
include/events/: close_view_command.hpp  command.hpp  die_event.hpp  directional_command.hpp  engine_event.hpp  melee_command.hpp  movement_command.hpp  quit_command.hpp  scroll_command.hpp  view_history_command.hpp
include/serialization/: binary_serializer_strategy.hpp
include/types/: action_result.hpp  engine_fwd.hpp  entity_fwd.hpp  map.hpp  math.hpp  nparray.hpp  state_result.hpp  world_fwd.hpp
include/ui/: ui.hpp
lib/: CMakeLists.txt
lib/include/: math.hpp
lib/include/components/: ai.hpp  ascii.hpp  attack.hpp  components.hpp  defence.hpp  identity.hpp  physique.hpp  status_condition.hpp  transform.hpp  velocity.hpp
lib/include/core/: colour.hpp  component_array.hpp  component_manager.hpp  coordinator.hpp  entity_manager.hpp  event.hpp  event_manager.hpp  math.hpp  system.hpp  system_manager.hpp  types.hpp
lib/include/systems/: combat_system.hpp  death_system.hpp  physics_system.hpp  status_condition_system.hpp
lib/include/utils/: logger.hpp
lib/src/: multiply.cpp
lib/src/systems/: combat_system.cpp  death_system.cpp  physics_system.cpp  status_condition_system.cpp
src/: TCODRenderer.cpp  basic_ai_component.cpp  command.hpp  components.cpp  consumable_factory.cpp  directional_command.cpp  draw.hpp  dungeon.cpp  dungeon.hpp  engine.cpp  engine.hpp  engine_event.hpp  entity_factory.cpp  entity_manager.cpp  entity_manager.hpp  game_entity.cpp  game_entity.hpp  globals.hpp  gui.cpp  health_bar.cpp  history_window.cpp  input_handler.cpp  input_handler.hpp  main.cpp  math.hpp  melee_command.cpp  melee_command.hpp  message_log.cpp  movement_command.cpp  movement_command.hpp  quit_command.cpp  quit_command.hpp  rectangular_room.cpp  rectangular_room.hpp  state.cpp  tile.hpp  ui_window.cpp  world.cpp
src/events/: close_view_command.cpp  command.cpp  die_event.cpp  directional_command.cpp  (+6 more)
tests/: CMakeLists.txt
tests/src/: alltests.cpp  status_condition_systems_tests.cpp
(+64 files in other folders)
